# alx-project-nexus

./: .env.example  .gitignore  LEARNING_LOG.md.md  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
catalog/: filters.py  models.py  serializers.py  urls.py  views.py
catalog/management/commands/: seed_data.py
catalog/migrations/: 0001_initial.py
config/: settings.py  urls.py
