[project]
name = "alx-project-nexus"
version = "0.1.0"
description = ""
authors = [
    {name = "Moussa Hassana",email = "moussahassana42@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==5.0.6)",
    "djangorestframework (==3.15.2)",
    "django-filter (==24.2)",
    "djangorestframework-simplejwt (==5.3.1)",
    "drf-spectacular (==0.27.2)",
    "python-dotenv (==1.0.1)",
    "psycopg[binary] (==3.2.1)",
    "gunicorn (==22.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
